<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- localized string -->
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="gather">Gather</string>
    <string name="invite">Invite</string>
    <string name="comment">Comment</string>
    <string name="send">Send</string>
    <string name="profile">Profile</string>
    <string name="start_with_email">Start with email</string>
    <string name="create_new_account">Create new account</string>
    <string name="twitter_authorization">Twitter Authorization</string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign out</string>
    <string name="notification">Notification</string>
    <string name="add_identity">Add identity</string>
    <string name="welcome_to_exfe">Welcome to EXFE</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="set_a_recognizable_name">Set a recognizable name</string>
    <string name="set_up_new_account">Set up new account</string>
    <string name="enter_exfe_password">Enter EXFE Password</string>
    <string name="set_exfe_password">Set EXFE Password</string>
    <string name="accepted">Accepted</string>
    <string name="interested">Iterested</string>
    <string name="declined">Declined</string>
    <string name="removed">Removed</string>
    <string name="pending">Pending</string>
    <string name="unavailable">Unavailable</string>
    <string name="im_in">I\'m in</string>
    <string name="no_response">No response</string>
    <string name="host">Host</string>
    <string name="mates">Mates</string>
    <string name="cancel">Cancel</string>
    <string name="identity_and_password_dont_match">"Identity and password don't match."</string>
    <string name="please_input_password">Please input password.</string>
    <string name="please_input_your_name">Please input your name.</string>
    <string name="add_comments">Add comments</string>
    <string name="sign_in">Sign In</string>
    <string name="sometime">Sometime</string>
    <string name="somewhere">Somewhere</string>
    <string name="gather_a_cross">Gather a ·X·</string>
    <string name="enter_date_and_time">Enter date and time</string>
    <string name="tap_here_to_set_place">Tap here to set place</string>
    <string name="edit_description">Edit description</string>
    <string name="tap_here_to_set_time">Tap here to set time</string>
    <string name="enter_email_or_name">Enter email or name</string>
    <string name="add_new">Add new</string>
    <string name="enter_place">Enter Place</string>
    <string name="remove_xx">Remove %s</string>
    <string name="place_info">Place info such as address, phone and so on.</string>
	<string name="place_title">Place title</string>
	<string name="place_title_or_location_is_needed">Place title or location is needed</string>
    <string name="warning">Warning</string>
	<string name="i_see">I see</string>
	<string name="you_hove_no_access_to_the_private_x">You have no access to this private &lt;font color="#3784D5">·X·&lt;/font>.</string>
	<string name="right_here">Right here</string>
	<string name="do_you_want_to_remove_the_editing_venue">Do you want to remove the editing venue?</string>
	
    <!-- function string -->
    <string name="app_name">EXFE</string>
    <string name="key_word_exfee">EXFE</string>
    <string name="image_hint_avatar">avatar</string>
    <string name="text_hint_title">Title</string>
    <string name="text_hint_place">Place</string>
    <string name="text_hint_time">Time</string>

    <!-- format string -->

    <plurals name="rsvp_with_mates">
        <item quantity="one">%1$s &lt;font color="#ffffff">with&lt;/font> %2$d &lt;font color="#ffffff">mate.&lt;/font></item>
        <item quantity="other">%1$s &lt;font color="#ffffff">with&lt;/font> %2$d &lt;font color="#ffffff">mates.&lt;/font></item>
    </plurals>

    <string name="x_attended">%d ·X·\n attended</string>
    <string name="start_with_xxx">Start with %s</string>
    <string name="two_sentences">%1$s.%2$s.</string>
    <string name="one_sentence">%1$s.</string>
    <string name="xxx_by_xxx">%1$s by %2$s.</string>
    <string name="meet_xxx">Meet %s</string>

    <plurals name="seconds_ago">
        <item quantity="one">1 second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>
    <plurals name="seconds_later">
        <item quantity="one">1 second later</item>
        <item quantity="other">%d seconds later</item>
    </plurals>
    <plurals name="minutes_ago">
        <item quantity="one">1 minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="minutes_later">
        <item quantity="one">1 minute later</item>
        <item quantity="other">%d minutes later</item>
    </plurals>
    <plurals name="hours_ago">
        <item quantity="one">1 hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="hours_later">
        <item quantity="one">1 hour later</item>
        <item quantity="other">%d hours later</item>
    </plurals>
    <plurals name="days_ago">
        <item quantity="one">1 day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="days_later">
        <item quantity="one">1 day later</item>
        <item quantity="other">%d days later</item>
    </plurals>
    <plurals name="months_ago">
        <item quantity="one">1 month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>
    <plurals name="months_later">
        <item quantity="one">1 month later</item>
        <item quantity="other">%d months later</item>
    </plurals>
    <plurals name="years_ago">
        <item quantity="one">1 year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>
    <plurals name="years_later">
        <item quantity="one">1 year later</item>
        <item quantity="other">%d years later</item>
    </plurals>
    <plurals name="in_minutes">
        <item quantity="one">In %d minute</item>
        <item quantity="other">In %d minutes</item>
    </plurals>
    <plurals name="in_hours">
        <item quantity="one">In %d hour</item>
        <item quantity="other">In %d hours</item>
    </plurals>
    <plurals name="in_days">
        <item quantity="one">In %d day</item>
        <item quantity="other">In %d days</item>
    </plurals>
    <plurals name="in_months">
        <item quantity="one">In %d month</item>
        <item quantity="other">In %d months</item>
    </plurals>
    <plurals name="in_years">
        <item quantity="one">In %d year</item>
        <item quantity="other">In %d years</item>
    </plurals>
    <plurals name="n_years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <plurals name="n_months">
        <item formatted="false" quantity="one">%d month</item>
        <item formatted="false" quantity="other">%d months</item>
    </plurals>
    <plurals name="n_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="n_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="n_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="n_seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>

    <string name="in_years_months" formatted="false">In %1$s and %2$s</string>
    <string name="years_months_ago" formatted="false">%1$s and %2$s ago</string>
    <string name="in_xxx" formatted="false">In %1$s</string>
    <string name="xxx_ago" formatted="false">%1$s ago</string>
    <string name="in_xxx_and_xxx" formatted="false">In %1$s and %2$s</string>
    <string name="xxx_and_xxx_ago" formatted="false">%1$s and %2$s ago</string>
    <string name="in_xxx_xxx_and_xxx" formatted="false">In %1$s %2$s and %3$s</string>
    <string name="xxx_xxx_and_xxx_ago" formatted="false">%1$s %2$s and %3$s ago</string>
    <string name="next_xxx" formatted="false">Next %1$s</string>
    <string name="last_xxx" formatted="false">Last %1$s</string>
    <string name="now">Now</string>
    <string name="just_now">Just now</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="the_day_before_yesterday">Two days ago</string>
    <string name="the_day_after_tomorrow">In 2 days</string>

    <!-- Date time format -->
    <string name="full_month_and_year">MMMM yyyy</string>

</resources>