<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_by_email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portal_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/portal_action_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="@drawable/sign_in_bar_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/welcome_to_exfe"
            android:textSize="16sp" >
        </TextView>

        <ImageButton
            android:id="@+id/btn_login_way_1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/nav_btn_bg"
            android:scaleType="fitCenter"
            android:src="@drawable/identity_facebook_32"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/btn_login_way_2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/nav_btn_bg"
            android:scaleType="fitCenter"
            android:src="@drawable/identity_twitter_32" />

        <ImageButton
            android:id="@+id/btn_login_way_more"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/nav_btn_bg"
            android:scaleType="fitCenter"
            android:src="@drawable/identity_more_32"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/input_indentity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:ellipsize="start"
                android:gravity="center"
                android:hint="@string/enter_your_email"
                android:imeOptions="actionNext"
                android:inputType="text|textEmailAddress"
                android:textSize="18sp"
                android:textStyle="italic" />

            <FrameLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp" >

                <ImageView
                    android:id="@+id/input_indentity_avatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_username_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >

            <EditText
                android:id="@+id/input_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:ellipsize="start"
                android:gravity="center"
                android:hint="@string/set_a_recognizable_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:textSize="18sp" />

            <View
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="4dp"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/input_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:ellipsize="start"
                android:gravity="center"
                android:hint="@string/enter_exfe_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/forget_password"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="4dp" />
            <!-- android:src="@drawable/question_circle" -->

            <ImageView
                android:id="@+id/show_password"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="4dp"
                android:src="@drawable/pass_circle_bg"
                android:visibility="gone" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/submit_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <Button
                android:id="@+id/btn_setup_new"
                android:layout_width="match_parent"
                android:layout_height="44sp"
                android:background="@drawable/btn_dark_44_bg"
                android:text="@string/set_up_new_account"
                android:textColor="#CCE4FF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="44sp"
                android:background="@drawable/btn_dark_44_bg"
                android:text="@string/login_sign_in"
                android:textColor="#CCE4FF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="20dp"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>